*** ?.?.? (TBD)
    - New translation: Icelandic, by Sveinn í Felli.

*** 2.11.3 (2022-07-09)
    - Updated translation: Turkish.
    - Target SDK version has been increased from 25 (Android 7.1) to 26
      (Android 8.0).

*** 2.11.2 (2022-05-15)
    - Fixed "None" option text in the English version of the app.
    - Updated translations: French, Italian, and Spanish.
    - Target SDK version has been increased from 24 (Android 7.0) to 25
      (Android 7.1).

*** 2.11.1 (2022-05-07)
    - The app no longer requires a special wake lock permission for keeping the
      screen turned on, but uses another technique instead which might also
      turn out beneficial to CPU and power usage.
    - Target SDK version has been increased from 23 (Android 6.0) to 24
      (Android 7.0).

*** 2.11.0 (2022-05-02)
    - New translation: Italian.
    - Updated translations: French and Norwegian Bokmål.
    - Screens with aspect ratios between 1.86 and 2.1 should no longer have
      black bars appear at the top or bottom of the screen.

*** 2.10.0 (2022-03-28)
    - New delay type: Capped Fischer.

*** 2.9.0 (2022-02-06)
    - New translation: Turkish, by Alparslan Şakçi.

*** 2.8.0 (2022-01-10)
    - New translation: German, by Petra Mirelli.
    - Bugfix: The alarm now stops playing when hitting the reset button.

*** 2.7.0 (2022-01-01)
    - New translation: Spanish, by Daniel Garcia Pallaviccini.

*** 2.6.2 (2021-09-20)
    - Fixed a bug where Bronstein delay games with no initial time would run
      into negative time.
    - Bronstein delays are displayed on the same line as the total time again
      when decisecond display is disabled.

*** 2.6.1 (2021-09-12)
    - Text fixes.

*** 2.6.0 (2021-09-04)
    - New translation: French, by Sitavi.

*** 2.5.1 (2021-08-21)
    - The about screen is now scrollable to be readable when there is less
      screen space.

*** 2.5.0 (2021-06-19)
    - Game time and delay can be specified in seconds, minutes or hours.