@@ -8,4 +8,4 @@
 # project structure.
 
 # Project target.
-target=android-26
+target=android-27
