@@ -1,5 +1,7 @@
 *** ?.?.? (TBD)
     - New translation: Icelandic, by Sveinn í Felli.
+    - Target SDK version has been increased from 26 (Android 8.0) to 27
+      (Android 8.1).
 
 *** 2.11.3 (2022-07-09)
     - Updated translation: Turkish.
